update nginx config

--- a/nginx/nginx_xw.conf
+++ b/nginx/nginx_xw.conf
@@ -23,8 +23,8 @@ http {
     keepalive_timeout   65;
     types_hash_max_size 2048;
 
-    upstream test.shouer.com {
-        server localhost:8080;
+    upstream xw.shouer.com {
+        server 192.168.199.120:50001;
     }
 
     server {
@@ -33,7 +33,7 @@ http {
        charset        utf-8;
 
        location / {
-           proxy_pass http://test.shouer.com/;
+           proxy_pass  http://xw.shouer.com/;
        }
     }
 
