atom修好后再次提交

--- a/redis/docker-compose.ha.yml
+++ b/redis/docker-compose.ha.yml
@@ -40,7 +40,7 @@ services:
       restart_policy:
         condition: on-failure
     links:
-      - master:redis-master
+      - master:redis_master
 
   redis_sentinel:
     build: sentinel
@@ -56,5 +56,5 @@ services:
       restart_policy:
         condition: on-failure
     links:
-      - master:redis-master
+      - master:redis_master
       - slave
